Update player endpoints
